# rpi-sandbox

./: README.md
camera-3/: 01-buffered-capture.py  01-capture.py  01-streaming.md  02-computer-vision.md  README.md
camera-3/02-detection/: main.py  pyproject.toml
camera-3/02-detection/src/cvlib/: detect.py  stream.py
dotfiles/: .bashrc  .gitconfig  README.md
